# GeoTransformerCPU

./: .gitignore  README.md  build.py  install.sh  pyproject.toml  requirements.txt  run.py  setup.py
experiments/geotransformer.3dmatch.stage4.gse.k3.max.oacl.stage2.sinkhorn/: demo2.py
geotransformer/engine/: base_trainer.py  epoch_based_trainer.py  iter_based_trainer.py  single_tester.py
geotransformer/extensions/common/: torch_helper.h
geotransformer/modules/geotransformer/: local_global_registration.py  point_matching.py  superpoint_matching.py  superpoint_target.py
geotransformer/modules/ops/: index_select.py  pointcloud_partition.py  transformation.py
geotransformer/modules/registration/: matching.py  procrustes.py
geotransformer/modules/sinkhorn/: learnable_sinkhorn.py
geotransformer/modules/transformer/: lrpe_transformer.py
geotransformer/registration/: backbone.py  config.py  model.py  runner.py
geotransformer/utils/: torch.py
