[tool.poetry]
name = "geotransformer"
version = "0.1.0"
description = ""
authors = ["Volodymyr Tsapiv <volodja.tsv@gmail.com>"]
packages = [{include = "geotransformer"}]

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = { version = "^2.2", source = "pytorch-cpu"}
scipy = "^1.14.1"
tqdm = "^4.66.5"
coloredlogs = "^15.0.1"
easydict = "^1.13"
nibabel = "^5.2.1"
open3d = "^0.18.0"
einops = "^0.8.0"
ipdb = "^0.13.13"
tensorboard = "^2.18.0"
tensorboardX = "^2.6.2.2"
numpy = "<=1.26.4"
scikit-learn = "<=1.5.0"
pyyaml = "^6.0.2"
addict = "^2.4.0"
pillow = "^11.0.0"
pandas = "^2.2.3"
matplotlib = "^3.9.2"

[[tool.poetry.source]]
    name     = "pytorch-cpu"
    priority = "explicit"
    url      = "https://download.pytorch.org/whl/cpu"


[build-system]
requires = ["poetry-core", "setuptools", "torch", "numpy"]
build-backend = "poetry.core.masonry.api"